clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00134.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00134.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s64i, "i", align 8
        %2 = alloca u64i, "u", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 1 : s64i
        store %4, %1, align 8
        %5 = const -1 : s64i
        store %5, %1, align 8
        %6 = const -1 : s64i
        store %6, %1, align 8
        %7 = const 4294967295 : s64i
        store %7, %1, align 8
        %8 = const -1 : s64i
        store %8, %1, align 8
        %9 = const 1 : s64i
        %10 = const 32 : s32i
        shift
        %12 = const 1 : s64i
        sub
        %14 = const 3 : s64i
        and
        store %15, %1, align 8
        %16 = const 1 : s64i
        %17 = const 32 : s32i
        shift
        %19 = const 1 : s64i
        sub
        %21 = const 0 : s64i
        cmp
        %23 = cast(bool_to_int) %22 : s32i
        %24 = cast(integral) %23 : s64i
        store %24, %1, align 8
        %25 = const 4294967295 : u32i
        %26 = const 0 : u32i
        cmp
        %28 = cast(bool_to_int) %27 : s32i
        %29 = cast(integral) %28 : s64i
        store %29, %1, align 8
        %30 = const 1 : u64i
        store %30, %2, align 8
        %31 = const 18446744073709551615 : u64i
        store %31, %2, align 8
        %32 = const 18446744073709551615 : u64i
        store %32, %2, align 8
        %33 = const 4294967295 : u64i
        store %33, %2, align 8
        %34 = const 18446744073709551615 : u64i
        store %34, %2, align 8
        %35 = const 1 : s64i
        %36 = const 32 : s32i
        shift
        %38 = const 1 : s64i
        sub
        %40 = const 3 : s64i
        and
        %42 = cast(integral) %41 : u64i
        store %42, %2, align 8
        %43 = const 1 : s64i
        %44 = const 32 : s32i
        shift
        %46 = const 1 : s64i
        sub
        %48 = const 0 : s64i
        cmp
        %50 = cast(bool_to_int) %49 : s32i
        %51 = cast(integral) %50 : u64i
        store %51, %2, align 8
        %52 = const 4294967295 : u32i
        %53 = const 0 : u32i
        cmp
        %55 = cast(bool_to_int) %54 : s32i
        %56 = cast(integral) %55 : u64i
        store %56, %2, align 8
        %57 = const 0 : s32i
        store %57, %0
        %58 = load %0 : s32i
        return %58
}
