clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00135.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00135.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s64i, "i", align 8
        %2 = alloca u64i, "u", align 8
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 1 : s64i
        store %4, %1, align 8
        %5 = const -1 : s64i
        store %5, %1, align 8
        %6 = const -1 : s64i
        store %6, %1, align 8
        %7 = const 4294967295 : s64i
        store %7, %1, align 8
        %8 = const -1 : s64i
        store %8, %1, align 8
        %9 = const -1 : s64i
        %10 = const 3 : s64i
        and
        store %11, %1, align 8
        %12 = const -1 : s64i
        %13 = const 0 : s64i
        cmp
        %15 = cast(bool_to_int) %14 : s32i
        %16 = cast(integral) %15 : s64i
        store %16, %1, align 8
        %17 = const 1 : u64i
        store %17, %2, align 8
        %18 = const 18446744073709551615 : u64i
        store %18, %2, align 8
        %19 = const 18446744073709551615 : u64i
        store %19, %2, align 8
        %20 = const 4294967295 : u64i
        store %20, %2, align 8
        %21 = const 18446744073709551615 : u64i
        store %21, %2, align 8
        %22 = const 18446744073709551615 : u64i
        %23 = const 3 : u64i
        and
        store %24, %2, align 8
        %25 = const 18446744073709551615 : u64i
        %26 = const 0 : u64i
        cmp
        %28 = cast(bool_to_int) %27 : s32i
        %29 = cast(integral) %28 : u64i
        store %29, %2, align 8
        %30 = const 0 : s32i
        store %30, %0
        %31 = load %0 : s32i
        return %31
}
