clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00136.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00136.c" (c, x86_64-unknown-linux-gnu)
global a : s32i = 0 [external, default, align 4, dso_local]
global b : s32i = 0 [external, default, align 4, dso_local]
global c : s32i = 0 [external, default, align 4, dso_local]
global d : s32i = 0 [external, default, align 4, dso_local]
global e : s32i = 0 [external, default, align 4, dso_local]
global f : s32i = 0 [external, default, align 4, dso_local]
global e_ : s32i = 0 [external, default, align 4, dso_local]
global f_ : s32i = 0 [external, default, align 4, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
