clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00139.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00139.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "f", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 0 : s32i
        store %3, %1, align 4
        %4 = const 2 : s32i
        %5 = load %1 : s32i, align 4
        mul
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
