clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00141.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00141.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "foo", align 4
        %2 = alloca s32i, "bar", align 4
        %3 = alloca s32i, "foobar", align 4
        %4 = const 0 : s32i
        store %4, %0
        %5 = load %1 : s32i, align 4
        %6 = load %2 : s32i, align 4
        %7 = add %5, %6 : s32i [nsw]
        store %7, %3, align 4
        %8 = load %1 : s32i, align 4
        %9 = load %2 : s32i, align 4
        %10 = add %8, %9 : s32i [nsw]
        store %10, %3, align 4
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
