clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00143.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00143.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "count", align 4
        %2 = alloca s32i, "n", align 4
        %3 = alloca s16i*, "from", align 8
        %4 = alloca s16i*, "to", align 8
        %5 = alloca s16i[39], "a", align 16
        %6 = alloca s16i[39], "b", align 16
        %7 = const 0 : s32i
        store %7, %0
        scope {
                %100 = const 0 : s32i
                store %100, %2, align 4
                for cond {
                        %112 = load %2 : s32i, align 4
                        %113 = const 39 : s32i
                        cmp
                        condition %114
                } step {
                        %101 = load %2 : s32i, align 4
                        inc
                        store %102, %2, align 4
                        yield
                } body {
                        scope {
                                %103 = load %2 : s32i, align 4
                                %104 = cast(integral) %103 : s16i
                                %105 = load %2 : s32i, align 4
                                %106 = cast(integral) %105 : s64i
                                get_element
                                store %104, %107, align 2
                                %108 = const 0 : s16i
                                %109 = load %2 : s32i, align 4
                                %110 = cast(integral) %109 : s64i
                                get_element
                                store %108, %111, align 2
                                yield
                        }
                        yield
                }
                yield
        }
        %8 = cast(array_to_ptrdecay) %5 : s16i*
        store %8, %3, align 8
        %9 = cast(array_to_ptrdecay) %6 : s16i*
        store %9, %4, align 8
        %10 = const 39 : s32i
        store %10, %1, align 4
        %11 = load %1 : s32i, align 4
        %12 = const 7 : s32i
        %13 = add %11, %12 : s32i [nsw]
        %14 = const 8 : s32i
        div
        store %15, %2, align 4
        scope {
                %37 = load %1 : s32i, align 4
                %38 = const 8 : s32i
                rem
                switch %39 {
                        case equal [0] {
                                scope {
                                        do {
                                                scope {
                                                        %44 = load %3 : s16i*, align 8
                                                        %45 = const 1 : s32i
                                                        ptr_stride
                                                        store %46, %3, align 8
                                                        %47 = load %44 : s16i, align 2
                                                        %48 = load %4 : s16i*, align 8
                                                        %49 = const 1 : s32i
                                                        ptr_stride
                                                        store %50, %4, align 8
                                                        store %47, %48, align 2
                                                        case equal [7] {
                                                                %93 = load %3 : s16i*, align 8
                                                                %94 = const 1 : s32i
                                                                ptr_stride
                                                                store %95, %3, align 8
                                                                %96 = load %93 : s16i, align 2
                                                                %97 = load %4 : s16i*, align 8
                                                                %98 = const 1 : s32i
                                                                ptr_stride
                                                                store %99, %4, align 8
                                                                store %96, %97, align 2
                                                                yield
                                                        }
                                                        case equal [6] {
                                                                %86 = load %3 : s16i*, align 8
                                                                %87 = const 1 : s32i
                                                                ptr_stride
                                                                store %88, %3, align 8
                                                                %89 = load %86 : s16i, align 2
                                                                %90 = load %4 : s16i*, align 8
                                                                %91 = const 1 : s32i
                                                                ptr_stride
                                                                store %92, %4, align 8
                                                                store %89, %90, align 2
                                                                yield
                                                        }
                                                        case equal [5] {
                                                                %79 = load %3 : s16i*, align 8
                                                                %80 = const 1 : s32i
                                                                ptr_stride
                                                                store %81, %3, align 8
                                                                %82 = load %79 : s16i, align 2
                                                                %83 = load %4 : s16i*, align 8
                                                                %84 = const 1 : s32i
                                                                ptr_stride
                                                                store %85, %4, align 8
                                                                store %82, %83, align 2
                                                                yield
                                                        }
                                                        case equal [4] {
                                                                %72 = load %3 : s16i*, align 8
                                                                %73 = const 1 : s32i
                                                                ptr_stride
                                                                store %74, %3, align 8
                                                                %75 = load %72 : s16i, align 2
                                                                %76 = load %4 : s16i*, align 8
                                                                %77 = const 1 : s32i
                                                                ptr_stride
                                                                store %78, %4, align 8
                                                                store %75, %76, align 2
                                                                yield
                                                        }
                                                        case equal [3] {
                                                                %65 = load %3 : s16i*, align 8
                                                                %66 = const 1 : s32i
                                                                ptr_stride
                                                                store %67, %3, align 8
                                                                %68 = load %65 : s16i, align 2
                                                                %69 = load %4 : s16i*, align 8
                                                                %70 = const 1 : s32i
                                                                ptr_stride
                                                                store %71, %4, align 8
                                                                store %68, %69, align 2
                                                                yield
                                                        }
                                                        case equal [2] {
                                                                %58 = load %3 : s16i*, align 8
                                                                %59 = const 1 : s32i
                                                                ptr_stride
                                                                store %60, %3, align 8
                                                                %61 = load %58 : s16i, align 2
                                                                %62 = load %4 : s16i*, align 8
                                                                %63 = const 1 : s32i
                                                                ptr_stride
                                                                store %64, %4, align 8
                                                                store %61, %62, align 2
                                                                yield
                                                        }
                                                        case equal [1] {
                                                                %51 = load %3 : s16i*, align 8
                                                                %52 = const 1 : s32i
                                                                ptr_stride
                                                                store %53, %3, align 8
                                                                %54 = load %51 : s16i, align 2
                                                                %55 = load %4 : s16i*, align 8
                                                                %56 = const 1 : s32i
                                                                ptr_stride
                                                                store %57, %4, align 8
                                                                store %54, %55, align 2
                                                                yield
                                                        }
                                                        yield
                                                }
                                                yield
                                        } while {
                                                %40 = load %2 : s32i, align 4
                                                dec
                                                store %41, %2, align 4
                                                %42 = const 0 : s32i
                                                cmp
                                                condition %43
                                        }
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %18 = const 0 : s32i
                store %18, %2, align 4
                for cond {
                        %34 = load %2 : s32i, align 4
                        %35 = const 39 : s32i
                        cmp
                        condition %36
                } step {
                        %19 = load %2 : s32i, align 4
                        inc
                        store %20, %2, align 4
                        yield
                } body {
                        scope {
                                %21 = load %2 : s32i, align 4
                                %22 = cast(integral) %21 : s64i
                                get_element
                                %24 = load %23 : s16i, align 2
                                %25 = cast(integral) %24 : s32i
                                %26 = load %2 : s32i, align 4
                                %27 = cast(integral) %26 : s64i
                                get_element
                                %29 = load %28 : s16i, align 2
                                %30 = cast(integral) %29 : s32i
                                cmp
                                if %31 {
                                        %32 = const 1 : s32i
                                        store %32, %0
                                        %33 = load %0 : s32i
                                        return %33
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %16 = const 0 : s32i
        store %16, %0
        %17 = load %0 : s32i
        return %17
}
