clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00144.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00144.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "i", align 4
        %2 = alloca s32i*, "q", align 8
        %3 = alloca void*, "p", align 8
        %4 = const 0 : s32i
        store %4, %0
        %5 = const 0 : s32i
        store %5, %1, align 4
        %6 = const #cir.ptr<null> : void*
        store %6, %3, align 8
        %7 = const #cir.ptr<null> : void*
        store %7, %3, align 8
        %8 = const #cir.ptr<null> : void*
        store %8, %3, align 8
        %9 = load %1 : s32i, align 4
        %10 = cast(int_to_bool) %9 : bool
        %11 = ternary %10 ? { : void*
                %33 = const #cir.ptr<null> : void*
                yield %33
        } : {
                %32 = load %3 : void*, align 8
                yield %32
        }
        %12 = cast(bitcast) %11 : s32i*
        store %12, %2, align 8
        %13 = load %1 : s32i, align 4
        %14 = cast(int_to_bool) %13 : bool
        %15 = ternary %14 ? { : void*
                %31 = load %3 : void*, align 8
                yield %31
        } : {
                %30 = const #cir.ptr<null> : void*
                yield %30
        }
        %16 = cast(bitcast) %15 : s32i*
        store %16, %2, align 8
        %17 = load %1 : s32i, align 4
        %18 = cast(int_to_bool) %17 : bool
        %19 = ternary %18 ? { : s32i*
                %29 = load %2 : s32i*, align 8
                yield %29
        } : {
                %28 = const #cir.ptr<null> : s32i*
                yield %28
        }
        store %19, %2, align 8
        %20 = load %1 : s32i, align 4
        %21 = cast(int_to_bool) %20 : bool
        %22 = ternary %21 ? { : s32i*
                %27 = const #cir.ptr<null> : s32i*
                yield %27
        } : {
                %26 = load %2 : s32i*, align 8
                yield %26
        }
        store %22, %2, align 8
        %23 = load %2 : s32i*, align 8
        %24 = cast(ptr_to_int) %23 : s32i
        store %24, %0
        %25 = load %0 : s32i
        return %25
}
